--- a/index.html
+++ b/index.html
@@ -1,28 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
+<head>
+	<title>Seminario de tecnologia</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no">
+	<link rel="stylesheet" href="estilo.css">-
+	
 
-  <head>
+	
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
 
-    <title>Full Width Pics - SEMINARIO DE TECNOLOGIA</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="css/full-width-pics.css" rel="stylesheet">
-
-  </head>
-
-  <body>
-
-       
-    <!-- Header - set the background image for the header in the line below -->
-  
+</head>
+<body background="Img/Fondos.jpg">
 	<div class="FormularioGeneral"><!--POSICION DE LA CLASSE PRINCIPAL-->
 			<div>
 				<form>
@@ -575,6 +563,6 @@
 				</form>
 		</div>
 	</div>
-  </body>
-
+	
+</body>
 </html>
