--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<fieldset>
 						<h2>Semniario de Tecnologia<br>Practica Final</h2><!---->
 						<!--INICIO HTML5-->
-						<p align="center"><img style="width: 214px; height: 164px;" alt="" src="Img/html-logo.png"></p>
+						<p align="center"><img style="width: 214px; height: 164px;" alt="" src="Imagenes/html5.jpg"></p>
 						<h2>HTML5</h2>
 
 						<p>Html, sigla en inglés de HyperText Markup Language (lenguaje de marcas de hipertexto), hace referencia al lenguaje de marcado para la elaboración de páginas web. Es un estándar que sirve de referencia del software que conecta con la elaboración de páginas web en sus diferentes versiones, define una estructura básica y un código (denominado código <a href="https://es.wikipedia.org/wiki/HTML" target="blank">HTML</a>) para la definición de contenido de una página web, como texto, imágenes, videos, juegos, entre otros.</p>
