--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Seminario de tecnologia</title>
+	<title>SEMINARIO DE TECNOLOGIA</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no">
 	<link rel="stylesheet" href="estilo.css">-
