--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div>
 				<form>
 					<fieldset>
-						<h2>Semniario de Tecnologia<br>Practica Final</h2><!---->
+						<h2>SEMINARIO DE TECNOLOGIA<br> </h2><!---->
 						<!--INICIO HTML5-->
 						<p align="center"><img style="width: 214px; height: 164px;" alt="" src="IMAGENES/html5.jpg"></p>
 						<h2>HTML5</h2>
