--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
 
 						</ul>
 
-						<div class="nombres"><p><strong>Luis Enrique Rodriguez Gonzalez 			15-EISM-1-054   <p>Seminario de tecnologia</p> </strong>
+						<div class="nombres"><p><strong>FREDDY A. URBANO DE LEON	10-MISN-1-086   <p>SEMINARIO DE TECNOLOGIA APLICADA</p> </strong>
 						<br><a href="https://github.com/DEVLuisEnrique/Practica.Final.Seminario" target="blank"><img src="Img/github-icon.png" width=25></a>
 
 						</p></div>
