--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
 						</ul>
 
 						<div class="nombres"><p><strong>FREDDY A. URBANO DE LEON	10-MISN-1-086   <p>SEMINARIO DE TECNOLOGIA APLICADA</p> </strong>
-						<br><a href="https://github.com/DEVLuisEnrique/Practica.Final.Seminario" target="blank"><img src="Img/github-icon.png" width=25></a>
+						<br><a href="https://fredurb.github.io/SEMINARIO-DE-TECNOLOGIA1/." target="blank"><img src="Img/github-icon.png" width=25></a>
 
 						</p></div>
 
