--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 </head>
-<body background="IMAGENES/fondos.jpg">
+<body background="IMAGENES/fondo1.jpg">
 	<div class="FormularioGeneral"><!--POSICION DE LA CLASSE PRINCIPAL-->
 			<div>
 				<form>
