--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 						<!--FIN HTML5-->
 						<hr size="10px">
 						<!--INICIO CSS3-->
-						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="IMAGENES/css3-logo.jpg"> </p>
+						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="IMAGENES/css3.jpeg"> </p>
 						<h2>CSS3</h2>
 
 						<p>Css3 es la última evolución del lenguaje de las Hojas de Estilo en Cascada (<a href="https://developer.mozilla.org/es/docs/Web/CSS/CSS3" target="blank">Cascading Style Sheets</a>), y pretende ampliar la versión<a href="https://www.w3.org/TR/2011/REC-CSS2-20110607/" target="blank"> CSS2.1.</a> Trae consigo muchas novedades altamente esperadas , como las esquinas redondeadas, sombras, gradientes , transiciones o animaciones, y nuevos layouts como multi-columnas, cajas flexibles o maquetas de diseño en cuadrícula (grid layouts).</p>
