--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						<hr size="10px">
 						<!--INICIO JAVASCRIPT-->
 
-						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="IMAGENES/Js-logo.png"> </p>
+						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="IMAGENES/Javascript.jpg"> </p>
 						<h2>JAVASCRIPT</h2>
 						<p><a href="https://es.wikipedia.org/wiki/JavaScript" target="blank">Javascript</a> (abreviado comúnmente JS) es un lenguaje de programación interpretado, dialecto del estándar ECMAScript. Se define como orientado a objetos,3​ basado en prototipos, imperativo, débilmente tipado y dinámico.</p>
 
@@ -89,7 +89,7 @@
 						<!--FIN JAVASCRIPT-->
 						<hr size="10px">
 						<!--INICIO PROGRESSIVE WEB APP-->
-						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="IMAGENES/pwa-logo.png"> </p>
+						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="IMAGENES/progressive.png"> </p>
 
 						<h2>PROGRESSIVE WEB APP</h2>
 
