--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						<!--FIN JAVASCRIPT-->
 						<hr size="10px">
 						<!--INICIO PROGRESSIVE WEB APP-->
-						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="IMAGENES/pWA.jpg"> </p>
+						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="IMAGENES/pwa.jpg"> </p>
 
 						<h2>PROGRESSIVE WEB APP</h2>
 
