--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 						<hr size="10px">
 
 						<!--INICIO INTELIGENCIA ARTIFICIAL-->
-						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="Img/ai-logo.png"> </p>
+						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="Img/INTELIGENCIA ARTIFICIAL.jpg"> </p>
 						<h2>INTELIGENCIA ARTIFICIAL</h2>
 						<p>La inteligencia artificial (IA), también llamada inteligencia computacional, es la inteligencia exhibida por máquinas. En <a href="https://es.wikipedia.org/wiki/Ciencias_de_la_computaci%C3%B3n" target="blank"> ciencias de la computación</a>, una máquina «inteligente» ideal es un agente racional flexible que percibe su entorno y lleva a cabo acciones que maximicen sus posibilidades de éxito en algún objetivo o tarea.1​ Coloquialmente, el término inteligencia artificial se aplica cuando una máquina imita las funciones «cognitivas» que los humanos asocian con otras mentes humanas, como por ejemplo: «aprender» y «resolver problemas». A medida que las máquinas se vuelven cada vez más capaces, tecnología que alguna vez se pensó que requería de inteligencia se elimina de la definición. Por ejemplo, el reconocimiento óptico de caracteres ya no se percibe como un ejemplo de la «inteligencia artificial» habiéndose convertido en una tecnología común. Avances tecnológicos todavía clasificados como inteligencia artificial son los sistemas de conducción autónomos o los capaces de jugar al ajedrez o al Go.</p>
 
