--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
 							</li>
 
-							<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="IMAGENES/rn-logo.jpg"> </p>
+							<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="IMAGENES/Red neuronal.jpg"> </p>
 							<li>
 							<h3>Red neuronal</h3>
 								<p>Las redes neuronales (también conocidas como sistemas conexionistas) son un modelo computacional basado en un gran conjunto de unidades neuronales simples (<a href="https://es.wikipedia.org/wiki/Neurona_de_McCulloch-Pitts" target="blank"> neuronas artificiales</a>), de forma aproximadamente análoga al comportamiento observado en los axones de las neuronas en los cerebros biológicos. Cada unidad neuronal está conectada con muchas otras y los enlaces entre ellas pueden incrementar o inhibir el estado de activación de las neuronas adyacentes. Cada unidad neuronal, de forma individual, opera empleando funciones de suma. Puede existir una función limitadora o umbral en cada conexión y en la propia unidad, de tal modo que la señal debe sobrepasar un límite antes de propagarse a otra neurona. Estos sistemas aprenden y se forman a sí mismos, en lugar de ser programados de forma explícita, y sobresalen en áreas donde la detección de soluciones o características es difícil de expresar con la programación convencional.</p>
