--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 						<hr size="10px">
 
 						<!--INICIO CRIPTOMONEDAS-->
-						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="Img/crip-logo.jpg"> </p>
+						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="IMAGENES/CRIPTOMONEDAS.jpg"> </p>
 						<h2>CRIPTOMONEDAS</h2>
 
 						<p>Una criptomoneda, criptodivisa (del inglés cryptocurrency) o criptoactivo es un medio digital de intercambio. La primera criptomoneda que empezó a operar fue el <a href="https://es.wikipedia.org/wiki/Bitcoin" target="blank"> bitcoin</a> en 2009 y, desde entonces, han aparecido muchas otras con diferentes características y protocolos como <a href="https://es.wikipedia.org/wiki/Litecoin" target="blank"> Litecoin</a>,<a href="https://es.wikipedia.org/wiki/Ethereum" target="blank"> Ethereum,</a><a href="https://es.wikipedia.org/wiki/Ripple" target="blank"> Ripple,</a> Dogecoin.</p>
@@ -238,7 +238,7 @@
 						<hr size="10px">
 
 						<!--INICIO BLOCKCHAIN-->
-						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="Img/Blockchain-logo.jpg"> </p>
+						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="IMAGENES/BLOCKCHAIN.jpg"> </p>
 						<h2>BLOCKCHAIN</h2>
 
 						<p>Una cadena de bloques o cadena articulada, conocida en inglés como blockchain, es una estructura de datos en la que la información contenida se agrupa en conjuntos (bloques) a los que se les añade metainformaciones relativas a otro bloque de la cadena anterior en una línea temporal, de manera que gracias a técnicas criptográficas, la información contenida en un bloque sólo puede ser repudiada o editada modificando todos los bloques posteriores. Esta propiedad permite su aplicación en entorno distribuido de manera que la estructura de datos blockchain puede ejercer de base de datos pública no relacional que contenga un histórico irrefutable de información.</p>
@@ -265,7 +265,7 @@
 						<hr size="10px">
 
 						<!--INICIO CYBERSEGURIDAD-->
-						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="Img/cyberseguridad-logo.jpg"> </p>
+						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="IMAGENES/CYBERSEGURIDAD.png"> </p>
 						<h2>CYBERSEGURIDAD</h2>
 
 						<p>La seguridad informática, también conocida como ciberseguridad o seguridad de tecnologías de la información, es el área relacionada con la informática y la telemática que se enfoca en la protección de la infraestructura computacional y todo lo relacionado con esta y, especialmente, la información contenida en una computadora o circulante a través de las redes de computadoras.</p>
@@ -289,7 +289,7 @@
 						<hr size="10px">
 
 						<!--INICIO REALIDAD VIRTUAL-->
-						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="Img/Realidad-virtual-investigación.jpg"> </p>
+						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="IMAGENES/REALIDAD VIRTUAL.jpg"> </p>
 						<h2>REALIDAD VIRTUAL</h2>
 
 						<p>La realidad virtual (RV) es un entorno de escenas u objetos de apariencia real. La acepción más común refiere a un entorno generado mediante tecnología <a href="https://es.wikipedia.org/wiki/Inform%C3%A1tica" target="blank"> informática</a>, que crea en el usuario la sensación de estar inmerso en él. Dicho entorno es contemplado por el usuario a través de un dispositivo conocido como <a href="https://es.wikipedia.org/wiki/Casco_de_realidad_virtual" target="blank"> gafas o casco de realidad virtual</a>. Este puede ir acompañado de otros dispositivos, como guantes o trajes especiales, que permiten una mayor interacción con el entorno así como la percepción de diferentes estímulos que intensifican la sensación de realidad.</p>
@@ -315,7 +315,7 @@
 						<hr size="10px">
 
 						<!--INICIO REALIDAD AUMENTADA-->
-						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="Img/realidad-aumentada.jpg"> </p>
+						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="IMAGENES/REALIDAD AUMENTADA.png"> </p>
 						<h2>REALIDAD AUMENTADA</h2>
 
 						<p>La realidad aumentada (RA) es el término que se usa para definir la visión de un entorno físico del mundo real, a través de un dispositivo tecnológico. Este dispositivo o conjunto de dispositivos, añaden información virtual a la información física ya existente; es decir, una parte sintética virtual a la real. De esta manera; los elementos físicos tangibles se combinan con elementos virtuales, creando así una realidad aumentada en tiempo real.</p>
@@ -341,7 +341,7 @@
 						<!--FIN REALIDAD VIRTUAL-->
 						<hr size="10px">
 						<!--INICIO REALIDAD MIXTA-->
-						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="Img/realidadmixta-logo.jpg"> </p>
+						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="IMAGENES/REALIDAD MIXTA.jpg"> </p>
 						<h2>REALIDAD MIXTA</h2>
 
 						<p>La realidad mixta (RM), también llamada a veces realidad híbrida, es la combinación de <a href="https://es.wikipedia.org/wiki/Realidad_virtual" target="blank"> realidad virtual</a> y <a href="https://es.wikipedia.org/wiki/Realidad_aumentada" target="blank"> realidad aumentada</a>. Esta combinación permite crear nuevos espacios en los que interactúan tanto objetos y/o personas reales como virtuales. Es decir, se puede considerar como una mezcla entre la realidad, realidad aumentada, virtualidad aumentada y realidad virtual.</p>
@@ -365,7 +365,7 @@
 						<hr size="10px">
 
 						<!--INICIO IOT-->
-						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="Img/IoT_image.jpg"> </p>
+						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="IMAGENES/IOT(INTERNET DE LAS COSAS).jpg"> </p>
 						<h2>IOT(INTERNET DE LAS COSAS)</h2>
 
 						<p>Internet de las cosas (en inglés, Internet of Things, abreviado IoT; IdC, por sus siglas en español ) es un concepto que se refiere a la <a href="https://es.wikipedia.org/wiki/Red_de_computadoras" target="blank"> interconexión </a> digital de objetos cotidianos con <a href="https://es.wikipedia.org/wiki/Internet" target="blank"> Internet</a>. </p>
@@ -392,7 +392,7 @@
 						<hr size="10px">
 
 						<!--INICIO MECATRONICA-->
-						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="Img/mecatronica.jpg"> </p>
+						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="IMAGENES/MECATRONICA.jpg"> </p>
 						<h2>MECATRONICA</h2>
 
 						<p>La ingeniería mecatrónica es una disciplina que sirve para diseñar y desarrollar productos que involucren sistemas de control para el diseño de productos o procesos inteligentes, lo cual busca crear <a href="https://es.wikipedia.org/wiki/M%C3%A1quina" target="blank"> maquinaria</a> más compleja para facilitar las actividades del ser humano a través de procesos electrónicos en la industria mecánica, principalmente.</p>
