--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
 						<hr size="10px">
 
 						<!--INICIO 3D PRINTING-->
-						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="Img/3dprint.jpg"> </p>
+						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="IMAGENES/3DP.jpg"> </p>
 						<h2>3D PRINTING</h2>
 
 						<p>La impresión 3D es cualquiera de varios procesos en los que el material se une o solidifica bajo el control de la computadora para crear un objeto <a href="https://en.wikipedia.org/wiki/Three-dimensional_space" target="blank"> tridimensional </a> , con material que se agrega (como moléculas líquidas o granos de polvo fusionados).</p>
@@ -440,7 +440,7 @@
 						<hr size="10px">
 						
 						<!--INICIO TECNOLOGI 5G-->
-						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="Img/5g-logo.jpg"> </p>
+						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="IMAGENES/5G.jpg"> </p>
 						<h2>TECNOLOGIA G5</h2>
 
 						<p>En telecomunicaciones, 5G son las siglas utilizadas para referirse a la quinta generación de tecnologías de <a href="https://es.wikipedia.org/wiki/Telefon%C3%ADa_m%C3%B3vil" target="blank"> telefonía móvil.</a> Es la sucesora de la tecnología <a href="https://es.wikipedia.org/wiki/Telefon%C3%ADa_m%C3%B3vil_4G" target="blank"> 4G</a>. Actualmente se encuentra sin estandarizar y las empresas de telecomunicación están desarrollando sus prototipos. Está previsto que su uso común sea en 2020.</p>
@@ -463,7 +463,7 @@
 						<hr size="10px">
 
 						<!--INICIO RESUMEN-->
-						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="Img/resumen.png"> </p>
+						
 						<h2>RESUMEN</h2>
 						<!--FIN RESUMEN-->
 
