--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 						<hr size="10px">
 						
 						<!--INICIO TECNOLOGI 5G-->
-						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="IMAGENES/5G.jpg"> </p>
+						<p align="center"> <img style="width: 214px; height: 164px;" alt="" src="IMAGENES/G5.jpg"> </p>
 						<h2>TECNOLOGIA G5</h2>
 
 						<p>En telecomunicaciones, 5G son las siglas utilizadas para referirse a la quinta generación de tecnologías de <a href="https://es.wikipedia.org/wiki/Telefon%C3%ADa_m%C3%B3vil" target="blank"> telefonía móvil.</a> Es la sucesora de la tecnología <a href="https://es.wikipedia.org/wiki/Telefon%C3%ADa_m%C3%B3vil_4G" target="blank"> 4G</a>. Actualmente se encuentra sin estandarizar y las empresas de telecomunicación están desarrollando sus prototipos. Está previsto que su uso común sea en 2020.</p>
