--- a/index.html
+++ b/index.html
@@ -552,8 +552,9 @@
 
 						</ul>
 
-						<div class="nombres"><p><strong>FREDDY A. URBANO DE LEON	10-MISN-1-086   <p>SEMINARIO DE TECNOLOGIA APLICADA</p> </strong>
-						<br><a href="https://fredurb.github.io/SEMINARIO-DE-TECNOLOGIA1/ </a>
+						<div class="nombres"><p><strong>FREDDY A. URBANO DE LEON	10-MISN-1-086   <p>SEMINARIO DE TECNOLOGIA APLICADA</p> 
+						<strong>GITHUB	</strong>
+						<br><a href="https://fredurb.github.io/SEMINARIO-DE-TECNOLOGIA1/. </a>
 
 						</p></div>
 
