--- a/index.html
+++ b/index.html
@@ -539,14 +539,14 @@
 									La Mecatrónica surge de la combinación sinérgica de distintas ramas de la Ingeniería. Su principal propósito es el análisis y diseño de productos y de procesos de manufactura automatizados
 								</p></li>
 
-							<li><h3>3d printing</h3>
+							<li><h3>3D printing</h3>
 								<p>
 									La impresion 3d es la creacion de objetos tridimensional. la impresion 3d e utiliza tanto en prototipos rápidos como en fabricación aditiva (AM).
 								</p></li>
 
-							<li><h3>Tecnologia 5g</h3>
+							<li><h3>Tecnologia 5G</h3>
 								<p>
-									La tecnologia 5g es una evolucion de la 4g, eso quiere decir que la transferencia de informacion va hacer mucho mas rapido.
+									La tecnologia 5g es una evolucion de la 4G, eso quiere decir que la transferencia de informacion va hacer mucho mas rapido.
 									Esta tecnologia esta prevista que pueda ser utilizada por todo el mundo en el 2025.
 								</p></li>	
 
