--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 						<p><strong>Videos relacionado:</strong></p>
 							<ul>
 								<li><a href="https://www.youtube.com/watch?v=DDizZizSSEs" target="blank">La siniestra tecnologia 5g.</a></li>
-								<li><a href="https://www.youtube.com/watch?v=7f-ddrH6Ilw" target="blank">Asi sera el 5g.</a></li>
+								<li><a href="https://www.youtube.com/watch?v=7f-ddrH6Ilw" target="blank">Asi sera el 5G.</a></li>
 								<li><a href="https://www.youtube.com/watch?v=4WWGtFD9VoQ" target="blank">Todo lo que debe saber de la tecnologia 5g.</a></li>
 								<li><a href="https://www.youtube.com/watch?v=Ytfezy3KXlQ" target="blank">El proximo gran avance de la tecnologia.</a></li>
 								
@@ -554,7 +554,7 @@
 
 						<div class="nombres"><p><strong>FREDDY A. URBANO DE LEON	10-MISN-1-086   <p>SEMINARIO DE TECNOLOGIA APLICADA</p> 
 						<strong>GITHUB</strong>
-						<a href="https://github.com/fredurb/SEMINARIO-DE-TECNOLOGIA1" target="blank"><img src="Img/github-icon.png" width="25"></a>
+						<a href="https://github.com/fredurb/SEMINARIO-DE-TECNOLOGIA1" target="blank">GITHUB</a>
 
 						</p></div>
 
