--- a/index.html
+++ b/index.html
@@ -545,9 +545,8 @@
 								</p></li>
 
 							<li><h3>Tecnologia 5G</h3>
-								<p>
-									La tecnologia 5g es una evolucion de la 4G, eso quiere decir que la transferencia de informacion va hacer mucho mas rapido.
-									Esta tecnologia esta prevista que pueda ser utilizada por todo el mundo en el 2025.
+								<p>La tecnologia 5g es una evolucion de la 4G, eso quiere decir que la transferencia de informacion va hacer mucho mas rapido.
+								 Esta tecnologia esta prevista que pueda ser utilizada por todo el mundo en el 2025.
 								</p></li>	
 
 						</ul>
